[#97] sai/dileep - Fixed alignments in myProfile.
What are the changes?

* Aligned cash to right and names to left in myProfile.
* Fixed alignment of players and downsized box.
* Giving focus to input elements on click

Why do we need this change?

* To enhance the player experience

--- a/public/css/board-style.css
+++ b/public/css/board-style.css
@@ -396,7 +396,7 @@ a {
   border-color: black;
   margin: 1vmax 0.5vmax;
   display: flex;
-  padding: 0.4vmax 1vmax;
+  padding: 0.2vmax 0;
   flex-direction: column;
   gap: 0.3vmax;
 }
@@ -863,7 +863,7 @@ a {
   border: var(--def-border);
   border-color: var(--others-border);
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   position: relative;
 }
